2007-10-31  Karl Berry  <karl@gnu.org>

	* doc/txi-no.tex: rename to txi-nb.tex.
	* po/no.po: remove.
	* po/LINGUAS: remove no.	

2007-10-24  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (cm_node),
	* makeinfo/cmds.c (cm_settitle): no need to call xml_begin_document.
	* makeinfo/makeinfo.c (convert_from_loaded_file): call
	xml_begin_document in docbook case too, else some frontmatter
	can be lost.
	Bug report from Sam Varshavchik, 14 Oct 2007 12:10:04, for binutils.
	
	* makeinfo/insertion.c: formatting.

	* makeinfo/xml.c (xml_begin_document): arg can be const;
	use basename of @setfilename instead of "book-root".
	(xml_push_current_element, xml_pop_current_element): use
	warning fn for consistent formatting.

	* util/dir-example: binutils update, etc.

2007-10-24  Sergey Poznyakoff  <gray@gnu.org.ua>

	* util/gendocs.sh: New option --texi2html, to use texi2html for
	creating HTML output.
	Handle special conditional constructs in the template: %%IF
	HTML_SECTION%% and %%IF HTML_CHAPTER%% (both closed with a
	corresponding %%ENDIF) to conditionally enable parts of the output
	depending on texi2html split outputs.
	* util/gendocs_template: Conditionally enable section and chapter
	split HTMLs.
	* util/gendocs_template_min: Likewise.

2007-10-19  Karl Berry  <karl@gnu.org>

	* info/display.c (display_update_one_window): don't try to display
	a window unless both width and height are >0.
	* window/window.c (window_new_screen_size): try to ensure that
	no window width/height ever becomes negative.
	Bug report and ideas from Vitezslav Crhonek, 18 Oct 2007 15:15:51,
	as well as https://bugzilla.redhat.com/show_bug.cgi?id=243971.

2007-10-13  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (cm_dircategory): use add_word instead of
	insert_string so that the info file header ("This is ...") comes
	after the INFO-DIR-SECTION magic.
	Bug report from Katsumi Yamaoka, emacs-devel 10 Oct 2007 11:17:10.

2007-10-08  Bruno Haible  <bruno@clisp.org>
